# Task5

./: .gitignore
Task-10.1/: main.cpp
Task-10.1.xcodeproj/: project.pbxproj
Task-10.1.xcodeproj/xcuserdata/margaret.xcuserdatad/xcschemes/: xcschememanagement.plist
Task5/: CMakeLists.txt  main.cpp
Task5.xcodeproj/: project.pbxproj
